using GoldMetrics.GoldCheck.Platform.ConsumerTraceability.Domain.Model.Aggregates;
using GoldMetrics.GoldCheck.Platform.Shared.Domain.Repositories;

namespace GoldMetrics.GoldCheck.Platform.ConsumerTraceability.Domain.Repositories;

public interface ITraceabilityJourneyRepository : IBaseRepository<TraceabilityJourney>
{
    Task<TraceabilityJourney?> FindLatestByQRCodeAsync(string qrCode,
        CancellationToken cancellationToken = default);
}